--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mint-ui": "^2.2.13",
     "mockjs": "^1.0.1-beta3",
     "vue": "^2.5.2",
+    "vue-amap": "^0.5.4",
     "vue-progressbar": "^0.7.4",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
