--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mockjs": "^1.0.1-beta3",
     "vue": "^2.5.2",
     "vue-amap": "^0.5.4",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-progressbar": "^0.7.4",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
