--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-awesome-swiper": "^3.1.3",
     "vue-progressbar": "^0.7.4",
     "vue-router": "^3.0.1",
+    "vue-wechat-title": "^2.0.4",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
