--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
+    "fastclick": "^1.0.6",
     "js-cookie": "^2.2.0",
     "mint-ui": "^2.2.13",
     "mockjs": "^1.0.1-beta3",
